package strategy;

public interface Driveability {
	public void driveable();
}
