package strategy;

public interface ForSale {
	public void forSale();
}
